2023-07-22T08:17:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5629682319 # 1012
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
* notice: last 14d: unq all: 8 44
* notice: prev accum: outdated-unq outdated-all / unq all: 540 866 / 571 911
* notice: next accum: outdated-unq outdated-all / unq all: 540 866 / 572 912
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-08 2023-07-22]

2023-07-21T16:19:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5624427077 # 1010
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
* notice: last 14d: unq all: 9 45
* notice: prev accum: outdated-unq outdated-all / unq all: 540 866 / 571 910
* notice: next accum: outdated-unq outdated-all / unq all: 540 866 / 571 911
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-07-21]

2023-07-21T08:19:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5620195530 # 1009
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
* notice: last 14d: unq all: 9 44
* notice: prev accum: outdated-unq outdated-all / unq all: 539 865 / 569 908
* notice: next accum: outdated-unq outdated-all / unq all: 540 866 / 571 910
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-07-07] / [2023-07-21]

2023-07-20T16:20:04Z: