@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-22T08:17:18Z",
-  "count_outdated" : 866,
-  "uniques_outdated" : 540,
-  "count" : 912,
+  "timestamp" : "2023-07-22T16:18:03Z",
+  "count_outdated" : 869,
+  "uniques_outdated" : 543,
+  "count" : 913,
   "uniques" : 572,
   "clones" : [
-    {
-      "timestamp": "2023-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
     {
       "timestamp": "2023-07-09T00:00:00Z",
       "count": 5,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
