@@ -3,11 +3,6 @@
   "uniques": 8,
   "clones": [
     {
-      "timestamp": "2023-07-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-09T00:00:00Z",
       "count": 5,
       "uniques": 3
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-22T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
