@@ -1,3 +1,12 @@
+2023-07-22T16:18:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5631597969 # 1013
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
+* notice: last 14d: unq all: 8 44
+* notice: prev accum: outdated-unq outdated-all / unq all: 540 866 / 572 912
+* notice: next accum: outdated-unq outdated-all / unq all: 543 869 / 572 913
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-07-08] / [2023-07-22]
+
 2023-07-22T08:17:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5629682319 # 1012
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-22
